Publish / draft btn are working now. take user to next screen on publish press

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3290,9 +3290,9 @@ border-top-color: #343a40;
 
             $('.published-btn').on('click', function() {
 
-                $('.badge-success').closest('.grid-item').show();
+                $('.Published').closest('.grid-item').show();
 
-                $('.badge-danger').closest('.grid-item').hide();
+                $('.Draft').closest('.grid-item').hide();
 
                 $grid.masonry('layout');
 
